--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -19,3 +19,10 @@
     @apply rounded-md py-2 px-3 uppercase text-xs font-bold cursor-pointer shadow-md
   }
 }
+
+.strikethrough {
+  text-decoration: line-through;
+  text-decoration-color: red;
+  transform: scale(1.08);
+  font-style: italic;
+}
