highlighting added to active btns in coffee journal

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -43,4 +43,8 @@
   .info-card {
     @apply rounded-lg bg-light text-contrast shadow-md;
   }
+
+  .active-btn {
+    @apply bg-contrast text-light
+  }
 }
